# Efficient_and_Accurate_Full-Waveform_Inversion_with_Total_Variation_Constraint

./: .gitignore  LICENSE.md  README.md  pyproject.toml  tasks.py
lib/misc/: historical_value.py  paths.py
lib/seismic/: fast_parallel_velocity_model_gradient_calculator.py  velocity_model_gradient_calculator.py
lib/signal_processing/: proximal_operator.py
src/: box-TV-constrained-FWI.py
