# black
[tool.black]
line-length = 200

# adjust isort to black
[tool.isort]
profile = "black"
line_length = 200

[tool.poetry]
name = "sandbox-onolab"
version = "0.1.0"
description = ""
authors = ["kryInit <kryinit@gmail.com>"]
readme = "README.md"
packages = [
    { include = "lib" },
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
invoke = "^2.2.0"
scikit-image = "^0.23.2"
devito = "^4.8.6"
joblib = "^1.4.2"
colorama = "^0.4.6"
pillow = "^10.4.0"
pytest = "^8.3.4"
tqdm = "^4.67.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
